# denpie

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  AGENTS.original.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  README.md  build.rs  dailytip_pb2.py  docker-compose.yml  install.sh  justfile  requirements-test.txt  schema.sql  settings.yaml  shell.nix  test_server.py
.cursor/agents/: denpie-frontend-designer.md  denpie-rust-backend-engineer.md
.github/workflows/: ci.yml
.zed/: tasks.json
benches/: run_bench.sh
benches/results/: FINAL_REPORT.md
config/: topic_icons.json
deploy/: dailytipdraft-autoupdate.service  dailytipdraft-autoupdate.sh  dailytipdraft-autoupdate.timer  dailytipdraft.service  denpie-autoupdate.service  denpie-autoupdate.sh  denpie-autoupdate.timer  denpie.service
docs/: admin-api.md  agent-server-guide.md  client-api.md  feature-integration.md  protobuf-api.md
frontend/: Cargo.toml  Trunk.toml  index.html  service-worker.js
frontend/src/: account_switch.rs  api.rs  app.rs  hooks.rs  image_compress.rs  main.rs  markdown.rs  passkeys.js  passkeys.rs  state.rs  topic_visual.rs
frontend/src/components/: account.rs  admin_shell.rs  api_keys.rs  archive.rs  button.rs  dashboard.rs  flow_card.rs  image_lightbox.rs  login.rs  mod.rs  select.rs  settings.rs  sidebar.rs  tooltip.rs  unified_flow.rs
frontend/src/i18n/: en.json  mod.rs
migrations/: 0001_schema.sql  0002_user_profile.sql
proto/: dailytip.proto  denpie.proto
scripts/: bootstrap-dev.sh  dev.sh
src/: api.rs  app.rs  auth.rs  autoupdate.rs  context.rs  daily_refresh.rs  dashboard.rs  error.rs  http_client.rs  image_compress.rs  image_store.rs  llm.rs  main.rs  srs.rs  tests.rs  types.rs
src/api/: admin.rs  auth.rs  pb.rs  response.rs  reviews.rs  settings.rs  tipcards.rs  tips.rs  topics.rs  transport.rs  types.rs
src/autoupdate/: config.rs  github.rs  manual.rs  mod.rs  runner.rs  settings_io.rs  status.rs  systemd.rs
src/config/: mod.rs  store.rs  topic_icons.rs  webauthn.rs
src/dashboard/: handlers.rs  mod.rs  response.rs  util.rs
src/dashboard/handlers/: autoupdate.rs  keys.rs  settings.rs  tipcards.rs  tips.rs  topics.rs  users.rs
src/db/: migrations.rs
src/db/repositories/: api_keys.rs  daily_refresh.rs  mod.rs  passkeys.rs  reviews.rs  tipcards.rs  token_usage.rs  topics.rs  user_settings.rs  users.rs
src/db/repositories/tipcards/: context_titles.rs  flow.rs  images.rs  info.rs  mod.rs  models.rs  queries.rs  queue.rs  writes.rs
src/domain/: image.rs  mod.rs  review.rs  scheduling.rs  tipcard.rs  topic_visual.rs
src/llm/: cards.rs  compression.rs  icons.rs  markdown.rs  mod.rs  transport.rs
src/scheduling/: mod.rs
src/scheduling/algorithms/: sm2.rs
src/services/: api_keys.rs  autoupdate.rs  mod.rs  review.rs  settings.rs  tipcards.rs  tips.rs  topics.rs
src/tests/: api_flow.rs  auth.rs  mod.rs  review.rs  server.rs  settings.rs  support.rs  tipcard.rs
templates/: admin.html  app.html
