[package]
name = "dailytipdraft"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
async-openai = "0.24.0" # as per skill
chrono = { version = "0.4", features = ["serde"] }
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["sqlite"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
webauthn-rs = "0.5"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
