[package]
name = "denpie"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
async-openai = { version = "0.34", features = ["chat-completion"] }
reqwest = { version = "0.13.2", features = ["json", "cookies"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["sqlite"] }
tower-http = { version = "0.6", features = ["compression-full", "fs", "cors", "trace"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
time = "0.3.47"
prost = "0.14.3"
bytes = "1.11.1"
webauthn-rs = { version = "0.5.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
url = "2.5"
uuid = { version = "1.10", features = ["v5", "serde"] }
tower_governor = { version = "0.4.2", features = ["axum"] }
libcaesium = "0.20.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
prost-build = "0.14.3"

[workspace]
resolver = "3"
members = [
    "frontend"
]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[profile.release.package.frontend]
opt-level = "z"
