[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
gloo-net = "0.3.1"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "Window", "Document", "Element", "EventTarget", "Storage", "FileList", "File", "HtmlTextAreaElement", "DragEvent", "DataTransfer"] }
wasm-bindgen-futures = "0.4"
gloo-timers = "0.4.0"
regex = "1.12.3"
lazy_static = "1.5.0"
gloo-storage = "0.4.0"
